{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 13,
  "lineage": "5c68ca46-4745-9242-fe46-00233017b152",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dcac065134fe7118",
            "arn": "arn:aws:ec2:ca-central-1:017820679929:elastic-ip/eipalloc-0dcac065134fe7118",
            "association_id": "eipassoc-0d98933d8718db423",
            "domain": "vpc",
            "id": "eipalloc-0dcac065134fe7118",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-05d78855e458787a7",
            "private_dns": "ip-10-0-1-188.ca-central-1.compute.internal",
            "private_ip": "10.0.1.188",
            "public_dns": "ec2-52-60-126-17.ca-central-1.compute.amazonaws.com",
            "public_ip": "52.60.126.17",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:017820679929:internet-gateway/igw-0ff479f43ecb4bf43",
            "id": "igw-0ff479f43ecb4bf43",
            "owner_id": "017820679929",
            "tags": {
              "Name": "paymentGWvpcigw"
            },
            "tags_all": {
              "Name": "paymentGWvpcigw"
            },
            "vpc_id": "vpc-0a9eec1e5635787f2"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dcac065134fe7118",
            "association_id": "eipassoc-0d98933d8718db423",
            "connectivity_type": "public",
            "id": "nat-0b56b4025ce0ec91b",
            "network_interface_id": "eni-05d78855e458787a7",
            "private_ip": "10.0.1.188",
            "public_ip": "52.60.126.17",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c9df5591639156cd",
            "tags": {
              "Name": "paymentGWdevvpc_nat_gateway"
            },
            "tags_all": {
              "Name": "paymentGWdevvpc_nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:017820679929:route-table/rtb-01edd2a3b32b656a8",
            "id": "rtb-01edd2a3b32b656a8",
            "owner_id": "017820679929",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b56b4025ce0ec91b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt"
            },
            "tags_all": {
              "Name": "private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9eec1e5635787f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:017820679929:route-table/rtb-04bda2b3c56c1a7db",
            "id": "rtb-04bda2b3c56c1a7db",
            "owner_id": "017820679929",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ff479f43ecb4bf43",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9eec1e5635787f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae52bcb61d35ba07",
            "route_table_id": "rtb-01edd2a3b32b656a8",
            "subnet_id": "subnet-0d6a7ef4920b5dfe0"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d5fbe040932208d",
            "route_table_id": "rtb-04bda2b3c56c1a7db",
            "subnet_id": "subnet-0c9df5591639156cd"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:017820679929:subnet/subnet-0d6a7ef4920b5dfe0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6a7ef4920b5dfe0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "017820679929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "paymentGWdevvpc_private_subnet"
            },
            "tags_all": {
              "Name": "paymentGWdevvpc_private_subnet"
            },
            "vpc_id": "vpc-0a9eec1e5635787f2"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:017820679929:subnet/subnet-0c9df5591639156cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9df5591639156cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "017820679929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "paymentGWdevvpc_public_subnet"
            },
            "tags_all": {
              "Name": "paymentGWdevvpc_public_subnet"
            },
            "vpc_id": "vpc-0a9eec1e5635787f2"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:017820679929:vpc/vpc-0a9eec1e5635787f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04effd1cac8d4aea7",
            "default_route_table_id": "rtb-092edf8c3d24e71ce",
            "default_security_group_id": "sg-0dd8d7f3dfeb61785",
            "dhcp_options_id": "dopt-0e1fbeb8891964f73",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a9eec1e5635787f2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-092edf8c3d24e71ce",
            "owner_id": "017820679929",
            "tags": {
              "Name": "paymentGWdevvpc"
            },
            "tags_all": {
              "Name": "paymentGWdevvpc"
            }
          }
        }
      ]
    }
  ]
}